--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -41,6 +41,6 @@
     </div> -->
 
     <div class="footer-bottom">
-        <p>&copy; 2025 CrossFit-RM. Todos los derechos reservados.</p>
+        <p>&copy; 2025 All1Fit. Todos los derechos reservados.</p>
     </div>
 </footer>
